--- a/memo/642115026.md
+++ b/memo/642115026.md
@@ -10,7 +10,7 @@ https://shorturl.at/dwx18
 
 ## title
 
-Moving to cloud-native: Top 5 problems with persistent data storage (and how to fix them!)Moving to cloud-native: Top 5 problems with persistent data storage (and how to fix them!)
+Moving to cloud-native: Top 5 problems with persistent data storage (and how to fix them!)
 
 ## source type
 
